--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
     "require": {
         "php": "^8.1",
         "ext-gmp": "*",
-        "fgrosse/phpasn1": "^2.0"
+        "sop/asn1": "^4.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.0||^8.0||^9.0",
