--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "tests/import/wycheproof"]
-	path = tests/import/wycheproof
+[submodule "tests/wycheproof"]
+	path = tests/wycheproof
 	url = https://github.com/google/wycheproof
