--- a/composer.json
+++ b/composer.json
@@ -46,7 +46,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Mdanter\\Ecc\\Tests": "tests/unit",
+            "Mdanter\\Ecc\\Tests\\": "tests/unit",
             "Mdanter\\Ecc\\Integration\\": "tests/integration"
         }
     }
