--- a/.github/workflows/smoketest.yml
+++ b/.github/workflows/smoketest.yml
@@ -1,4 +1,4 @@
-name: Smoketests
+name: Smoketest
 
 on:
   push:
@@ -8,6 +8,7 @@ jobs:
     runs-on: 'ubuntu-24.04'
 
     steps:
+
     - name: Checkout
       uses: actions/checkout@v4
       with:
@@ -33,4 +34,4 @@ jobs:
       run: composer install --prefer-dist --no-progress --no-scripts
 
     - name: Run tests
-      run: vendor/bin/phpunit --testsuite Unit --coverage-text --coverage-clover=tests/output/coverage.clover
+      run: vendor/bin/phpunit --testsuite Unit
