ci: Disable coverage for resource-intense jobs

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -45,5 +45,5 @@ jobs:
         run: composer install --prefer-dist --no-progress --no-scripts
 
       - name: Run tests
-        run: vendor/bin/phpunit
+        run: vendor/bin/phpunit --no-coverage
 
