--- a/.github/workflows/smoketest.yml
+++ b/.github/workflows/smoketest.yml
@@ -34,4 +34,4 @@ jobs:
       run: composer install --prefer-dist --no-progress --no-scripts
 
     - name: Run tests
-      run: vendor/bin/phpunit --testsuite Unit
+      run: vendor/bin/phpunit --testsuite Unit --no-coverage
