--- a/composer.json
+++ b/composer.json
@@ -26,28 +26,28 @@
             "name": "Florian Moser",
             "email": "git@famoser.ch",
             "homepage": "https://famoser.ch/",
-            "role": "Maintainer"
+            "role": "Author"
         }
     ],
     "require": {
         "php": "^8.1",
-        "ext-gmp": "*",
-        "sop/asn1": "^4.1"
+        "ext-gmp": "*"
     },
     "require-dev": {
+        "sop/asn1": "^4.1",
         "phpunit/phpunit": "^10",
         "squizlabs/php_codesniffer": "^2.0",
         "symfony/yaml": "^6.4"
     },
     "autoload": {
         "psr-4": {
-            "Mdanter\\Ecc\\": "src/"
+            "Famoser\\Elliptic\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Mdanter\\Ecc\\Tests\\": "tests/unit",
-            "Mdanter\\Ecc\\Integration\\": "tests/integration"
+            "Famoser\\Elliptic\\Tests\\": "tests/unit",
+            "Famoser\\Elliptic\\Integration\\": "tests/integration"
         }
     }
 }
