maint: Add code style checker

--- a/.github/workflows/smoketest.yml
+++ b/.github/workflows/smoketest.yml
@@ -33,5 +33,8 @@ jobs:
     - name: Install dependencies
       run: composer install --prefer-dist --no-progress --no-scripts
 
+    - name: Check code style
+      run: ./vendor/bin/phpcs
+
     - name: Run tests
       run: vendor/bin/phpunit --testsuite Unit --no-coverage
