--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,9 @@
         "sop/asn1": "^4.1",
         "phpunit/phpunit": "^10",
         "squizlabs/php_codesniffer": "^3.0",
-        "symfony/yaml": "^6.4"
+        "symfony/yaml": "^6.4",
+        "phpstan/phpstan": "^2.1",
+        "phpstan/phpstan-phpunit": "^2.0"
     },
     "autoload": {
         "psr-4": {
