--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -32,5 +32,9 @@ jobs:
         run: composer install --prefer-dist --no-progress --no-scripts
 
       - name: Run tests
-        run: vendor/bin/phpunit --testsuite Unit --coverage-clover=tests/output/coverage.clover --coverage-text
+        run: vendor/bin/phpunit --testsuite Unit --coverage-text
 
+      - name: Coveralls
+        uses: coverallsapp/github-action@v2
+        with:
+          file: clover.xml
