--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -10,16 +10,9 @@ on:
 
 jobs:
   test:
-    runs-on: ${{ matrix.operating-system }}
-
-    strategy:
-      matrix:
-        operating-system: ['ubuntu-24.04', 'ubuntu-22.04']
-        php-versions: ['8.2', '8.3', '8.4']
-        phpunit-versions: ['latest']
+    runs-on: 'ubuntu-24.04'
 
     steps:
-
       - name: Checkout
         uses: actions/checkout@v4
         with:
@@ -28,7 +21,7 @@ jobs:
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: ${{ matrix.php-versions }}
+          php-version: '8.4'
           extensions: gmp
           coverage: none
 
@@ -45,5 +38,4 @@ jobs:
         run: composer install --prefer-dist --no-progress --no-scripts
 
       - name: Run tests
-        run: vendor/bin/phpunit --no-coverage
-
+        run: vendor/bin/phpunit --testsuite Integration --no-coverage
