--- a/composer.json
+++ b/composer.json
@@ -49,7 +49,8 @@
     "autoload-dev": {
         "psr-4": {
             "Famoser\\Elliptic\\Tests\\": "tests/unit",
-            "Famoser\\Elliptic\\Integration\\": "tests/integration"
+            "Famoser\\Elliptic\\Integration\\": "tests/integration",
+            "Famoser\\Elliptic\\ConstTime\\": "tests/consttime"
         }
     }
 }
