--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -24,6 +24,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: true
+          clean: true
 
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
