--- a/.github/workflows/unit.yml
+++ b/.github/workflows/unit.yml
@@ -12,6 +12,7 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v4
       with:
+        clean: true
         submodules: true
 
     - name: Setup PHP
