--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,8 @@
         "squizlabs/php_codesniffer": "^3.0",
         "symfony/yaml": "^6.4",
         "phpstan/phpstan": "^2.1",
-        "phpstan/phpstan-phpunit": "^2.0"
+        "phpstan/phpstan-phpunit": "^2.0",
+        "danielburger1337/sha3-shake": "^1.1"
     },
     "autoload": {
         "psr-4": {
