--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "symfony/yaml": "^6.4",
         "phpstan/phpstan": "^2.1",
         "phpstan/phpstan-phpunit": "^2.0",
-        "danielburger1337/sha3-shake": "^1.1"
+        "danielburger1337/sha3-shake": "^1.1",
+        "paragonie/ecc": "^2.5"
     },
     "autoload": {
         "psr-4": {
